<resources>
    <string name="app_name">Хочу помочь</string>
    <string name="load">Загрузка…</string>
    <string name="profile">Профиль</string>
    <string name="name_example">Константинов Денис</string>
    <string name="birth_day">День рождения</string>
    <string name="birth_day_example">01 февраля 1980</string>
    <string name="sphere">Сфера деятельности</string>
    <string name="sphere_example">Хирургия, травмотология</string>
    <string name="get_push_notifications">Получить push-уведомления</string>
    <string name="your_friends">Ваши друзья</string>
    <string name="name_example_3">Дмитрий Валерьевич</string>
    <string name="name_example_2">Евгений Александров</string>
    <string name="name_example_1">Виктор Кузнецов</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="title_news">Новости</string>
    <string name="title_search">Поиск</string>
    <string name="title_help">Помочь</string>
    <string name="title_history">История</string>
    <string name="title_profile">Профиль</string>
    <string name="edit">Редактировать</string>
    <string name="logo">Логотип</string>
    <string name="simbirsoft_logo">Симбирсофт</string>
    <string name="profile_image">Изображение профиля</string>
    <string name="pick_photo">Выбрать фото</string>
    <string name="make_photo">Сделать снимок</string>
    <string name="delete">Удалить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help">Помочь</string>
    <string name="pick_category">Выберите категорию помощи</string>
    <string name="kids">Дети</string>
    <string name="adults">Взрослые</string>
    <string name="elders">Пожилые</string>
    <string name="animals">Животные</string>
    <string name="events">Мероприятия</string>
    <string name="input_organisation_name">Введите название организации</string>
    <string name="search_label">test</string>
    <string name="search_hint">Введите название организации</string>
    <string name="settings_description">test</string>
    <string name="by_events">По мероприятиям</string>
    <string name="by_nko">По НКО</string>
    <string name="events_msg">Напишите в строке поиска название мероприятия или ключевые слова.</string>
    <string name="for_example">Например,</string>
    <string name="masterclass_help"><a href="">мастер-класс, помощь</a></string>
    <string name="search_result">Ключевые слова: мастер-класс, помощь\nРезультаты поиска: 109 мероприятий</string>
    <string name="example_card_description">Дубовская школа-интернат для детей с ограниченными возможностями здоровья стала первой в области</string>
    <string name="example_card_title_text">Спонсоры отремонтируют школу-интернат</string>
    <string name="exmaple_card_button_text">Осталось 13 дней (21.09 – 20.10)</string>
    <string name="filter">Фильтр</string>
    <string name="news">Новости</string>
    <string name="apply">Подтвердить</string>
    <string name="how_can_you_help">Как вы хотите помочь?</string>
    <string name="exmaple_news_detail_title">Спонсоры отремонтируют</string>
    <string name="share">Поделиться</string>
    <string name="have_a_question">У вас есть вопросы?</string>
    <string name="write_to_us"><a href="">Напишите нам</a></string>
    <string name="example_event_description">Участники и болельщики смогли весело и активно провести время на «Петербургском благотворительном марафоне» и при этом финансово поучаствовать в помощи детям.\n\nПри этом финансово поучаствовать в помощи детям. При этом финансово поучаствовать в помощи детям.</string>
    <string name="go_to_organisation_website"><a href="">Перейти на сайт организаии</a></string>
    <string name="help_with_clothes">Помочь вещами</string>
    <string name="became_volunteer">Стать волонтером</string>
    <string name="professional_help">Проф. помощь</string>
    <string name="help_with_money">Помочь деньгами</string>
    <string name="authorization">Авторизация</string>
    <string name="auth_msg">Для участия в мероприятиях войдите в приложение через социальые сети</string>
    <string name="or_auth_with_app">Или авторизуйтесь через приложение</string>
    <string name="email">E-mail</string>
    <string name="email_hint">Введите e-mail</string>
    <string name="password">Пароль</string>
    <string name="password_hint">Введите пароль</string>
    <string name="sign_in">Войти</string>
    <string name="forgot_password"><a href="">Забыли пароль?</a></string>
    <string name="registration"><a href="">Регистрация</a></string>
    <string name="donation_dialog_title">Спасибо за решение помочь!</string>
    <string name="donation_dialog_message">Выберите размер пожертвования</string>
    <string name="donation_dialog_option1">100 ₽</string>
    <string name="donation_dialog_option2">500 ₽</string>
    <string name="donation_dialog_option3">1000 ₽</string>
    <string name="donation_dialog_option4">2000 ₽</string>
    <string name="enter_amount_of_money">или введите нужную сумму</string>
    <string name="edit_text_enter_amount_of_money">Введите сумму</string>
    <string name="cancel">Отмена</string>
    <string name="send">Перевести</string>
    <string name="notification_msg">"Спасибо, что пожертвовали %1$s ₽! Будем очень признательны, если вы сможете пожертвовать еще больше."</string>
    <string name="notification_remind_msg">Напоминаем, что мы будем очень признательны, если вы сможете пожертвовать еще больше.</string>
</resources>