<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news"
        android:enabled="true"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:enabled="true"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_help"
        android:enabled="true"
        android:title="@string/title_help" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:enabled="true"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:enabled="true"
        android:title="@string/title_profile" />
</menu>