<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar_layout"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/officinasansextraboldscc"
                        android:text="@string/profile"
                        android:textColor="@color/white"
                        android:textSize="@dimen/toolbar_title_text_size"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="22dp"
                        android:src="@drawable/ic_edit"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/appbar_layout">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profile_image_height"
                    android:src="@drawable/img_man" />

                <LinearLayout
                    android:id="@+id/profile_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/profile_information_block_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/name_example"
                        android:textColor="@color/black_87"
                        android:textSize="@dimen/profile_name_text_size" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/birth_day"
                            android:textColor="@color/black_38"
                            android:textSize="@dimen/article_text_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/birth_day_example"
                            android:textColor="@color/black_87"
                            android:textSize="@dimen/info_row_text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/sphere"
                            android:textColor="@color/black_38"
                            android:textSize="@dimen/article_text_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/sphere_example"
                            android:textColor="@color/black_87"
                            android:textSize="@dimen/info_row_text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/get_push_notifications"
                            android:textColor="@color/black_87"
                            android:textSize="@dimen/info_row_text_size" />

                        <Switch
                            android:id="@+id/switch1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:theme="@style/Switch"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/cool_gray" />

                <LinearLayout
                    android:id="@+id/friends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/profile_information_block_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/your_friends"
                        android:textColor="@color/black_38"
                        android:textSize="@dimen/article_text_size" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">


                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="@dimen/friend_icon_width"
                            android:layout_height="@dimen/friend_icon_height"
                            android:src="@drawable/avatar_3" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/name_example_3"
                            android:textColor="@color/black_87"
                            android:textSize="@dimen/info_row_text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">


                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="@dimen/friend_icon_width"
                            android:layout_height="@dimen/friend_icon_height"
                            android:src="@drawable/avatar_2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/name_example_2"
                            android:textColor="@color/black_87"
                            android:textSize="@dimen/info_row_text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">


                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="@dimen/friend_icon_width"
                            android:layout_height="@dimen/friend_icon_height"
                            android:src="@drawable/avatar_1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/name_example_1"
                            android:textColor="@color/black_87"
                            android:textSize="@dimen/info_row_text_size" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/cool_gray" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/logout"
                android:theme="@style/MainButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>